# weather-station-LoRa

./: CMakeLists.txt  README.md  main.c
lib/rfm95/: rfm95.c  rfm95.h  rfm95_definitions.h
